--- a/dtd_externa/ejercicio-4.css
+++ b/dtd_externa/ejercicio-4.css
@@ -31,3 +31,19 @@ genero {
   padding-left: 5px;
   font-weight: bold;
 }
+a {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: auto;
+  width: 60%;
+  font-weight: bold
+}
